@@ -55,6 +55,7 @@ bugfix:
 - fix rule-edit 'filter=(members.count < ) - if dynamicAddressGroup | related to last fix of class-AddressGroup if group isDynamic
 - fix class App-stroe - Application-group members are imported now
 - fix class-PanAPIConnector.php - introcude M-200 and M-600 devices
+- fix address-/ service-merger where same object name in address and addressgroup cause an error
 
 
 1.5.13
